# adobe-mcp-rs

./: AGENTS.md  Cargo.toml  README-ja.md  README.md
.github/workflows/: ci.yml  installer-build.yml  rc-release.yml
crates/ae-mcp/src/: daemon.rs  main.rs  mcp_stdio.rs
crates/ai-core/: Cargo.toml
crates/ai-core/src/: lib.rs
crates/ai-mcp/: Cargo.toml
crates/ai-mcp/src/: main.rs  mcp_stdio.rs
crates/bridge-contract-tests/: Cargo.toml
crates/bridge-contract-tests/src/: lib.rs
crates/bridge-contract-tests/tests/: protocol_contract.rs
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: lib.rs
crates/daemon-core/: Cargo.toml
crates/daemon-core/src/: lib.rs
crates/id-core/: Cargo.toml
crates/id-core/src/: lib.rs
crates/id-mcp/: Cargo.toml
crates/id-mcp/src/: main.rs  mcp_stdio.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: lib.rs  script_contract.rs
crates/platform-service/: Cargo.toml
crates/platform-service/src/: lib.rs
crates/pr-core/src/: lib.rs
crates/pr-mcp/: Cargo.toml
crates/pr-mcp/src/: main.rs  mcp_stdio.rs
crates/ps-core/: Cargo.toml
crates/ps-core/src/: lib.rs
crates/ps-mcp/: Cargo.toml
crates/ps-mcp/src/: main.rs  mcp_stdio.rs
docs/: adobe-host-roadmap.md  after-effects-bridge-lifecycle.md  after-effects-mcp-surface.md  bridge-contract-testing.md  bridge-protocol.md  bridge-smoke-result.schema.json  capability-matrix.md  development-stages.md  indesign-mcp.md  installer-e2e.md  mcp-jsx-tool-restructure.md  migration-guide-ts-to-rust.md  operations-runbook.md  release-checklist.md  script-contract.md  script-file-security.md  setup-codex-mcp.md  signing-and-rc.md  specification-rust-migration.md  worktree.md
docs/adr/: 0001-host-neutral-daemon-broker.md  0002-after-effects-headless-startup-bridge.md
docs/examples/: bridge-smoke-result.example.json
scripts/: install-bridge-installer.ps1  install-bridge.ps1  install-bridge.sh  install-codex-mcp-config.sh  install-indesign-bridge.ps1  install-indesign-bridge.sh  macos-release-tools.sh  notarize-macos.sh  package-macos.sh  package-windows.ps1
scripts/tests/: fake-macos-tool.sh  install-bridge-macos-bash32.sh  test-macos-release-flow.sh
src/illustrator/cep/mcp-bridge-illustrator/: README.md  index.html
src/indesign/uxp/: mcp-bridge-indesign.idjs
src/scripts/: mcp-bridge-auto.jsx  mcp-bridge-shutdown.jsx  mcp-bridge-startup.jsx
(+15 files in other folders)
