[package]
name = "bridge-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bridge-core = { path = "../bridge-core" }
chrono.workspace = true
daemon-core = { path = "../daemon-core" }
mcp-core = { path = "../mcp-core" }
serde_json.workspace = true
tempfile = "3.20"
pr-core = { path = "../pr-core" }
ps-core = { path = "../ps-core" }
ai-core = { path = "../ai-core" }
id-core = { path = "../id-core" }
