[package]
name = "daemon-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
mcp-core = { path = "../mcp-core" }
bridge-core = { path = "../bridge-core" }

[dev-dependencies]
tempfile = "3.20"
