[package]
name = "ps-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
mcp-core = { path = "../mcp-core" }
bridge-core = { path = "../bridge-core" }
daemon-core = { path = "../daemon-core" }
platform-service = { path = "../platform-service" }
ps-core = { path = "../ps-core" }
